[package]
name = "mini-payment"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.15.13", default-features = false, features = ["yaml"] }
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde-aux = "4.7.0"
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["clock",
   "serde"] }
unicode-segmentation = "1.12.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
env_logger = "0.11.8"
log = "0.4.27"

[dev-dependencies]
claims = "0.7"
wiremock = "0.6.4"
